# Next-Word-Predictor-LSTM

./: .gitignore  README.md  pyproject.toml
src/v1/: main.py  model.py  predict.py  train.py
src/v2/: __init__.py  data_preprocessing.py  model.py  text_generator.py  training.py
