[project]
name = "next-word-predictor"
version = "0.1.0"
description = "Neural network-based next word predictor for Sherlock Holmes text generation"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "numpy>=1.21.0",
]

[project.scripts]
next-word-predictor = "src.v2.training:execute_complete_training_pipeline"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
